# ChangeLog for media-sound/pulseaudio
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/pulseaudio/ChangeLog,v 1.383 2015/03/17 14:24:14 tetromino Exp $

  17 Mar 2015; Alexandre Rostovtsev <tetromino@gentoo.org> metadata.xml:
  Update another url

  17 Mar 2015; Alexandre Rostovtsev <tetromino@gentoo.org>
  pulseaudio-5.0-r4.ebuild, pulseaudio-5.0-r7.ebuild,
  pulseaudio-5.99.3-r1.ebuild, pulseaudio-6.0.ebuild:
  Update urls for USE=system-wide and make the elog message clearer about the
  negative implications of the flag (bug #543574, thanks to Kent Fredric).

  17 Mar 2015; Alexandre Rostovtsev <tetromino@gentoo.org>
  pulseaudio-5.0-r4.ebuild, pulseaudio-5.0-r7.ebuild,
  pulseaudio-5.99.3-r1.ebuild, pulseaudio-6.0.ebuild:
  openssl dep needs to be slotted

  17 Mar 2015; Alexandre Rostovtsev <tetromino@gentoo.org>
  pulseaudio-5.99.3-r1.ebuild, pulseaudio-6.0.ebuild:
  Raise minimum orc version to 0.4.15 to ensure sane temp usage (bug #543364).

  16 Mar 2015; Jeroen Roovers <jer@gentoo.org> pulseaudio-6.0.ebuild:
  Marked ~hppa (bug #543354).

  14 Mar 2015; Rick Farina <zerochaos@gentoo.org> pulseaudio-6.0.ebuild:
  let's add some keywords to pulseaudio 6 now that it's not a pre-release, it's
  working pretty well for me

  14 Mar 2015; Pacho Ramos <pacho@gentoo.org> pulseaudio-5.0-r7.ebuild:
  amd64 stable, bug 534012

*pulseaudio-6.0 (14 Mar 2015)

  14 Mar 2015; Manuel Rüger <mrueg@gentoo.org> +pulseaudio-6.0.ebuild:
  Version bump. Fixes bug #540058.

  07 Mar 2015; Pacho Ramos <pacho@gentoo.org> -pulseaudio-5.0-r5.ebuild,
  -pulseaudio-5.0-r6.ebuild, -pulseaudio-5.99.3.ebuild:
  Drop old

*pulseaudio-5.99.3-r1 (02 Mar 2015)

  02 Mar 2015; Rick Farina <zerochaos@gentoo.org> +pulseaudio-5.99.3-r1.ebuild:
  resolution for bug #537358

  19 Feb 2015; Michał Górny <mgorny@gentoo.org> pulseaudio-5.0-r4.ebuild,
  pulseaudio-5.0-r5.ebuild, pulseaudio-5.0-r6.ebuild, pulseaudio-5.0-r7.ebuild,