@@ -12,30 +12,16 @@ AUX pulseaudio.service 227 SHA256 62cd3b7e83845a27f437790cf293970f85ff02816da599
 AUX pulseaudio.tmpfiles 36 SHA256 d836951fb800308256288506b6bd82919d377399e1292dc10905a7aa12dac0e9 SHA512 f040850d81030ef04e1aa368d333a1ae1b7238adef5772280fc344c3068262d5ab8c9f3edb92db9c443f9d7d21abb27583ea1efc51ed733bbfa43e2edc68dde1 WHIRLPOOL b293b7372b7f63ddea63e6985d1f66a2010d8778ea3ae00501e58f15bfba3ed19b794111c073ee3bd5c8cf98d33f3c8db95220acf57f97477523f4cfa7121553
 AUX svolume-fix_param_loading_undefined_beh.patch 981 SHA256 844d3a095d26277548d250eda2aecd031270e7bef9c4fb1abd2ae989028225ee SHA512 a4ce28879bc1f6806597511bbe3b9c40d706933f5668dc42dfcea44de489d778d2a167ba01b926d0a6e3d8e280de54b8addea16f654c7c60c945329a9d448368 WHIRLPOOL 13698d1ac8110291fd70edf3eb7fd9c9b43c933f1a62530d644ff09722cbd6b09cb157f67fe6149ad1302f6d7a6b59c8c763cd419bf542688ec18e105e7a7a33
 DIST pulseaudio-5.0.tar.xz 1455428 SHA256 99c13a8b1249ddbd724f195579df79484e9af6418cecf6a15f003a7f36caf939 SHA512 f3d64bd6e03a732fd812da466b6658004600b4f3d0b9760403b7e113b6d654d54387658bf3704f45f28ab700245433e23fe517e4579130886fc58647eb97be2b WHIRLPOOL c85829c78ded3bbef234e455bfd3778f2daf50de9d7627508dbf131d0c398e35ab3ae41a4b5136f0c0da09249bc9a600ad85d848ba4e1faba74875af0a787036
-DIST pulseaudio-5.99.3.tar.xz 1468972 SHA256 88f14aa22eb611276c584f9fba6a190954f751b98a7bd6112763f1d6a0670b52 SHA512 a76bc662b274b96803370e39f5362b4490848398a9830cff788b6a1c070014cc0290bf923039f7bcd18ac458f011a167346722b5f041a8c0daa1ec1f8d72ac82 WHIRLPOOL 70d3fef108aaf3727f01b6dd17fcfa8c3845d175ab3f4b183deaf180612785014a9a45c221a057177153b949398410799bfd0bf43a4e8ee6b0e4236ee1fc6a14
 DIST pulseaudio-6.0.tar.xz 1469248 SHA256 b50640e0b80b1607600accfad2e45aabb79d379bf6354c9671efa2065477f6f6 SHA512 4f2293b41c8278047a41be4609a6bc267766874001092a91e785b05d5224fd82810862402942dadbb54bed7f74689779c958ca512666dfe6755d29551583cc2d WHIRLPOOL d75724f2ada640dabd256dc9e9840def17e78f63116c31df711d266349e9f4b99efbc797a5108649c860a5bf8ec8199383eaede440d8b4b655ef09f4ce37984f
 EBUILD pulseaudio-5.0-r4.ebuild 10461 SHA256 22895f17dc532ed4c976b79c37253d3ae014bcd8e39d2ddf2276c1cd6010922b SHA512 0894c2f249c1f330a4eb4884579c09592c1c79a6ffccc0791ea0d6248bca27ba337237e9c2abd5804c407b738df30b215259875e4c7a1b41ada2283e3ab072c0 WHIRLPOOL bc592497d2a2e188ebc3799280d2ef05c9595dfa30c02f98d8503f523a0157783d0cddc0ed7371315b950de2c5bdc978744027585c2d2827a0a62f30ea2c7496
 EBUILD pulseaudio-5.0-r7.ebuild 11075 SHA256 418f7dc5ff82f48bdc196fb0aac191aa8a53d5f692afd9ffa26a5661273296a7 SHA512 565d44a44d51f68f0bdf4baeeabbf673b732ac9466046afc44257a37afce5bfeb0f7c4aa5fde80c41a44d451bfd8bfab3b5e888e3fbcf316c9af8f3ed662d75b WHIRLPOOL 7c751e8ed23d7fc2ca55a75afab58d48235e48bde886f3dfd147cf24811ad5898e9ddfacd049d4f99ff90e6a1026af7223d399f8d082bbe4555651cc82841139
-EBUILD pulseaudio-5.99.3-r1.ebuild 11561 SHA256 7449acb76b607f9056b029925b94d3a433091ef9caddc551785f71b5196eba86 SHA512 18b297594d053737866aabbe662fc27f7dc432abc8fa4478ec986252c72f1d04ed35e31ee915a2b3b33688d39f0c14dda9d4c22c4b9ea812e82ecc37021f9f95 WHIRLPOOL 12c40e07d5ea9f4917415f8d7b744ff2639e450b48bb546ec2a7a9fe99cc5927d8325ee1e5ad74ff45ee4c17eb64ef491059c207a8def9b1c99708ad6346ac90
-EBUILD pulseaudio-6.0.ebuild 11634 SHA256 6c927d79e005bb9083059e215000faea0bde3c7aa73b8f9097aa742c85ffc188 SHA512 b9decfa13be5474476179b7518cbc8256a44d55ab660e3b728c4999973862003bf86c89e4df03ebb9c7e79f7303d02fc0780f5a63b970de1004f2b8da9328e7a WHIRLPOOL 138cc0a3f8424a65fc259f77d470b2e524ed31c21b9b3bf7b87f00241fbfe8e5ba7dc3165457f573623766f583de6bcac632a1ca5c65452d1244a9261d516d43
-MISC ChangeLog 72430 SHA256 80cde3174bfc1c777c62f506acfc85d09375dea170860639141a269d64c95b44 SHA512 b8657744c48b807bf3b6abe9a86c0493ca0c2db98aba93149c2a743fb84d4353f1f8412cfb971ae43bb2297e2cd15b3b8ad5c7371022adf2b7aed0c6f4c9d0ba WHIRLPOOL ac7c445e064a09228d5c64ef61a2c61800fb0e37025e16178e5b73980db550cf6e596e5c899315eecb9c114e7156a429aa3a0ead6b8a1c2126a557d44fb60513
+EBUILD pulseaudio-6.0.ebuild 11677 SHA256 f92a76f280056da3f951803e189b029912370e420e894e8bbdf312550153a100 SHA512 e7ec75ac87a3f599756a595ac44c07f554b922575c955c0e0dcae99140ebee9153bb771afc3d02dd01d1b4c521288e10593534b4273747d2446b68fccaa5efba WHIRLPOOL 684e92dc6222e10423820bb36d810d57c1f25376a159e1ac610e222cce5116b5deda1085fbf390ecb6b1018214de9422fdbacc01198e2a75ca9ce9cc5e069fdc
+MISC ChangeLog 72596 SHA256 3f56cbf7ad42091738fa7861e5ed8270be41ebeb3c4d52a235f0fe833b4fd652 SHA512 939c1c7662b90de24659f6a6475ccfccd9c4a6e8803e9c629179d06a8593cc5c2ac726bc44de179b07b0c958163a8acfd9f9fe5c0cfd7f9233ab34d3264b72b6 WHIRLPOOL 8f1e5fd366506f7b0b0a736a8efeabf057b394d24dabb407d4c81a96ddba594355a0ccfbf2091741daa641534cd46ffcfbcd750c65d5440e8596285dc916e453
 MISC metadata.xml 3321 SHA256 6898c911257d674e31c3953817368f932b435b6bf814539c274740d6dd99992b SHA512 59f151fe5a7505f84ce426f0f1eab6219a67c98dec8aca2239fc5c96a21669c7dfb311b6f5ff2db4bf486981ad52fcf039c63f0465c8870bbf48df1357e9904d WHIRLPOOL 1b577d5f2771ea31a3f7b0e7bd391595ec74d99251255f3de12fcd4b92e17d65d4a3dbbb51e8952d3ea08f6298c45b400ffb9bcb295ca344d607fead74dc6032
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0
+Version: GnuPG v2
 
-iQJ8BAEBCABmBQJVCDkQXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ1RTNCRkUzRDRBNkI2MEEwQkYwQzMyOEEx
-OEU1QjZGMkQ4RDVFQzhEAAoJEBjltvLY1eyN+dAQANlejtzcX2iIkV0Nfl2k3E8g
-z0KPNoefBoOWzgUzZDHcxP/BrWMTGDdc8ZYCFkIAfu0fISzRhFa7rJj83hiWVwcC
-2aN1f13qWjBxZj8VY0azNdfa8irR7LdFamNEWm6fu2U+IW0a9RZl2O0rzhUoq85Y
-SyztIeZ27lgN6qgRc2hZRx8QGEosEI2IQ4vG0YX//KNbeiKJ6xclAkDpGC7kZncK
-DOYlbUJV5+H9BbpBFxplwAcaqa1Z9/M1S7k/1cj6QVDrt/rUCYPpzAHebvNQpygi
-qHctWHE4cod6D8XXo6iUuTvXFissQt+yK7av0SVEyIqpvspJDgVbTcnSNKb5tgKA
-MQDa9mP6Qr0O9jLB9ABxc0wqHOPZMWcQIX5vjS9rPKVa90GSCRaIKfkiuexm59NL
-GbzaLFr2wUT3QJHA1S7/gGf7K2izJvXK6O4JnOY2dU7/1bMAdgo4ssenfLL9ghlt
-PLEYn9WHP7hoiSZxWtl2QIyBhAOqSgAGdoKz+mzT+5Jx7+Py4Ww04kzXvu+dxUn5
-Or1f3BsWmqOn3p2WNaDgawZDXIydtYgBggfc0YZ5ntr1rbY9ch31lQWGmpn82cvT
-tn0/gY97hEHrVVwn0mUVsDqL/l1c7NtCaIjAokpUZR1aw8+afacXYSL4xiZVjuSf
-ZqjJQbyo0HY032QB/tpg
-=l0VS
+iEYEAREIAAYFAlUKhSoACgkQCaWpQKGI+9RnvQCeIMaQkDx9MjWN/y0wz8B9mr5j
+kg8AnjQRSyqydH9tTWr7SVxdaSni35Oo
+=IRwn
 -----END PGP SIGNATURE-----
