@@ -1,6 +1,10 @@
 # ChangeLog for media-sound/pulseaudio
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/pulseaudio/ChangeLog,v 1.383 2015/03/17 14:24:14 tetromino Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/pulseaudio/ChangeLog,v 1.384 2015/03/19 08:13:50 pacho Exp $
+
+  19 Mar 2015; Pacho Ramos <pacho@gentoo.org> -pulseaudio-5.99.3-r1.ebuild,
+  pulseaudio-6.0.ebuild:
+  The fix for bug #534582 was dropped by error (#543364), drop old.
 
   17 Mar 2015; Alexandre Rostovtsev <tetromino@gentoo.org> metadata.xml:
   Update another url
